Add jwt authentication
